[package]
name = "create_html"
version = "0.1.0"
edition = "2021"
authors = ["One_Ordinary_Man"]
description = "Creates index.html with all the boilerplate inside designated folder"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
